--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -35,7 +35,7 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">
                 <i class="fa fa-map" aria-hidden="true"></i>
-                US Map <span class="sr-only">(current)</span>
+                US Map
               </a>
             </li>
             <li class="nav-item">
@@ -61,6 +61,40 @@
           <br/>
           <i><small>Disclaimer: Rendering of this map is not perfect and might have missed some places or counties, due to the nature of the data received.</small></i>
         </p>
+        <br/>
+        <h5>Summary Information</h5>
+        <div class="table-responsive">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th>State</th>
+                <th>Cases</th>
+                <th>Deaths</th>
+                <th>As of Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>New York</td>
+                <td>12</td>
+                <td>2</td>
+                <td>03/28/2020</td>
+              </tr>
+              <tr>
+                <td>New York</td>
+                <td>12</td>
+                <td>2</td>
+                <td>03/28/2020</td>
+              </tr>
+              <tr>
+                <td>New York</td>
+                <td>12</td>
+                <td>2</td>
+                <td>03/28/2020</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </main>
     </div>
   </div>
