--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -64,35 +64,38 @@
         <br/>
         <h5>Summary Information</h5>
         <div class="table-responsive">
-          <table class="table table-striped table-sm">
+          <table id="tblStateData" class="table table-striped table-sm">
             <thead>
               <tr>
                 <th>State</th>
-                <th>Cases</th>
-                <th>Deaths</th>
-                <th>As of Date</th>
+                <th class="text-right" width="">Cases</th>
+                <th class="text-right">Deaths</th>
+                <th class="text-center">As of Date</th>
               </tr>
             </thead>
-            <tbody>
+           
+            <tbody data-bind="foreach: rows">
               <tr>
-                <td>New York</td>
-                <td>12</td>
-                <td>2</td>
-                <td>03/28/2020</td>
-              </tr>
-              <tr>
-                <td>New York</td>
-                <td>12</td>
-                <td>2</td>
-                <td>03/28/2020</td>
-              </tr>
-              <tr>
-                <td>New York</td>
-                <td>12</td>
-                <td>2</td>
-                <td>03/28/2020</td>
+                <td data-bind="text: state"></td>
+                <td data-bind="number: cases" class="text-right"></td>
+                <td data-bind="number: deaths" class="text-right"></td>
+                <td data-bind="text: asof" class="text-center"></td>
               </tr>
             </tbody>
+            <tbody data-bind="if: error">
+              <tr>
+                <td colspan="4" data-bind="text: error"></td>
+              </tr>
+            </tbody>
+          
+            <tfoot>
+              <tr>
+                <td>Total</td>
+                <td class="text-right" data-bind="number: totalCases"></td>
+                <td class="text-right" data-bind="number: totalDeaths"></td>
+                <td></td>
+              </tr>
+            </tfoot>
           </table>
         </div>
       </main>
@@ -105,11 +108,11 @@
 <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
 <script src="https://code.highcharts.com/mapdata/countries/us/us-all-all.js"></script>
-
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 </html>
