--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -67,9 +67,21 @@
           <table id="tblStateData" class="table table-striped table-sm">
             <thead>
               <tr>
-                <th>State</th>
-                <th class="text-right" width="">Cases</th>
-                <th class="text-right">Deaths</th>
+                <th class="sortable">
+                  <span title="Click here to sort by State" data-bind="click: sort" data-id="state">State
+                    <i class="fa" data-bind="css : {'fa-arrow-down': sortedColumn() == 'state' && sortedOrder() == 'desc', 'fa-arrow-up': sortedColumn() == 'state' && sortedOrder() == 'asc' }"></i>
+                  </span>
+                </th>
+                <th class="text-right sortable">
+                  <span title="Click here to sort by Cases" data-bind="click: sort" data-id="cases">Cases
+                    <i class="fa" data-bind="css : {'fa-arrow-down': sortedColumn() == 'cases' && sortedOrder() == 'desc', 'fa-arrow-up': sortedColumn() == 'cases' && sortedOrder() == 'asc' }"></i>
+                  </span>
+                </th>
+                <th class="text-right sortable">
+                  <span title="Click here to sort by Deaths" data-bind="click: sort" data-id="deaths">Deaths
+                    <i class="fa" data-bind="css : {'fa-arrow-down': sortedColumn() == 'deaths' && sortedOrder() == 'desc', 'fa-arrow-up': sortedColumn() == 'deaths' && sortedOrder() == 'asc' }"></i>
+                  </span>
+                </th>
                 <th class="text-center">As of Date</th>
               </tr>
             </thead>
