Got a working drill down for historical chart

--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">CoviMaps</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">CoviMaps</a>
     <!--
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     -->
@@ -33,13 +33,13 @@
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">
+              <a class="nav-link active" href="/">
                 <i class="fa fa-map" aria-hidden="true"></i>
                 US Map
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/historical">
                 <i class="fa fa-line-chart" aria-hidden="true"></i>
                 Historial Chart
               </a>
@@ -123,7 +123,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
 <script>
   window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  ga('create', 'UA-43945755-5', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
 </script>
 <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
