Adding reset button

--- a/webapp/src/static/historical.html
+++ b/webapp/src/static/historical.html
@@ -71,6 +71,7 @@
                        optionsCaption: 'Choose County'"></select>
               </div>
               <button type="submit" class="btn btn-sm btn-primary mb-2" data-bind="click: onFormClick">Drill Down</button>
+              <button type="reset" class="btn btn-sm btn-dark mb-2 ml-2" data-bind="click: onFormClear">Reset</button>
             </form>
           </div>
         </div>
