--- a/webapp/src/static/historical.html
+++ b/webapp/src/static/historical.html
@@ -88,7 +88,7 @@
         <div data-bind="highstock: options" style="height: 520px; width: 100%; margin: 0 auto; text-align:center; line-height: 520px">
         </div>
         <p>
-          <strong>Credits</strong>: We use data for New York Times for rendering this chart. The front-end chart library is powered by Highcharts. Kudos to both of them.
+          <strong>Credits</strong>: We use data from New York Times for rendering this chart. The front-end chart library is powered by Highcharts. Kudos to both of them.
           <br/>
           <i><small>Disclaimer: Rendering of this chart is not perfect and might have missed some places or counties, due to the nature of the data received.</small></i>
         </p>
