--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -57,7 +57,7 @@
           Downloading map...
         </div>
         <p>
-          <strong>Credits</strong>: We use data for New York Times for rendering this map. The front-end chart library is powered by Highcharts. Kudos to both of them.
+          <strong>Credits</strong>: We use data from New York Times for rendering this map. The front-end chart library is powered by Highcharts. Kudos to both of them.
           <br/>
           <i><small>Disclaimer: Rendering of this map is not perfect and might have missed some places or counties, due to the nature of the data received.</small></i>
         </p>
