Fixing the CSS layout for menu to be mobile friendly

--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -15,14 +15,23 @@
 
 <body>
 
-  <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+  <nav class="navbar navbar-dark text-center sticky-top bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">CoviMaps</a>
     <!--
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     -->
-    <ul class="navbar-nav px-3">
-      <li class="nav-item text-nowrap">
-        <!-- <a class="nav-link" href="#">Report Problem</a> -->
+    <ul class="navbar-nav flex-row px-3 d-md-none">
+      <li class="nav-item nav-item mr-5">
+        <a class="nav-link active" href="/">
+          <i class="fa fa-map" aria-hidden="true"></i>
+          US Map
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/historical">
+          <i class="fa fa-line-chart" aria-hidden="true"></i>
+          Historial Chart
+        </a>
       </li>
     </ul>
   </nav>
