Fixing bug in data display on the site for data point and updating disclaimer text about data delay

--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -68,7 +68,7 @@
         <p>
           <strong>Credits</strong>: We use data from New York Times for rendering this map. The front-end chart library is powered by Highcharts. Kudos to both of them.
           <br/>
-          <i><small>Disclaimer: Rendering of this map is not perfect and might have missed some places or counties, due to the nature of the data received.</small></i>
+          <i><small>Disclaimer: Rendering of this map is not perfect and might have missed some places or counties, due to the nature of the data received. Data on this website is updated hourly by pulling the latest daily data from NYT.</small></i>
         </p>
         <br/>
         <h5>Summary Information</h5>
