Fixing issue with displaying map properly on mobile devices

--- a/webapp/src/static/index.html
+++ b/webapp/src/static/index.html
@@ -62,7 +62,7 @@
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
           <h5>US Map for COVID-19 Cases By County</h5><br/>
         </div>
-        <div id="container" style="height: 620px; width: 100%; margin: 0 auto; text-align:center; line-height: 520px">
+        <div id="chart-container">
           Downloading map...
         </div>
         <p>
